Bug 1634854 - Make performance.observe queues task when buffered is set r=baku

Spec: https://w3c.github.io/performance-timeline/#observe-method

Per sepc, when the buffered flag is set, a PerformanceObserver
task should be queued to notify the observer for buffered entires.

Differential Revision: https://phabricator.services.mozilla.com/D75574